fix overflow-x

--- a/src/components/Slider/Slide/SlideHomepage/index.css
+++ b/src/components/Slider/Slide/SlideHomepage/index.css
@@ -2,7 +2,7 @@
     position: relative;
     height: 450px;
     text-align: left;
-    overflow: auto;
+    overflow-x: hidden;
 }
 
 .slide img {
